# rsr-paddock

./: README.md  package-lock.json  package.json
src/: App.css  App.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
